# cs521-topic-01b-merkle-patricia-tries

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.cpp  localtest.cpp  merkle_patricia_trie.cpp  merkle_patricia_trie.h  server  server.cpp
frontend/mpt-display/: README.md  package-lock.json  package.json
frontend/mpt-display/e2e/: vue.spec.ts
frontend/mpt-display/src/: App.vue
frontend/mpt-display/src/assets/: base.css  main.css
frontend/mpt-display/src/components/: TrieGraph.vue
frontend/mpt-display/src/components/__tests__/: HelloWorld.spec.ts
frontend/mpt-display/src/types/: mpt.ts
frontend/mpt-display/src/utils/: trieGraph.ts
